force-app/main/default/objects/ORTLRelevantUser__c.object
<CustomObject>
    <fields>
        <fullName>ActionNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Display Action Number</description>
        <label>Action Number</label>
        <referenceTo>ORTLAction__c</referenceTo>
        <relationshipLabel>Relevant User (CC to)</relationshipLabel>
        <relationshipName>RelevantUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentUser__c</fullName>
        <formula>RelevantUser__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelevantUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To display Relevant name who related to that particular action</description>
        <label>Relevant User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relevant_User_CC_to1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TagNo__c</fullName>
        <formula>ActionNumber__r.txtTagNo__c</formula>
        <label>Tag No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskObjective__c</fullName>
        <formula>ActionNumber__r.Objective__c</formula>
        <label>Task Objective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskTitle__c</fullName>
        <label>Task Title</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaskType__c</fullName>
        <formula>TEXT(ActionNumber__r.TaskType__c)</formula>
        <label>Task Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txtRelevantUser__c</fullName>
        <description>Relevant user as text field</description>
        <label>Relevant User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relevant User (CC to)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>txtRelevantUser__c</columns>
        <columns>ActionNumber__c</columns>
        <columns>TagNo__c</columns>
        <columns>TaskType__c</columns>
        <columns>TaskObjective__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyCCto</fullName>
        <columns>NAME</columns>
        <columns>txtRelevantUser__c</columns>
        <columns>ActionNumber__c</columns>
        <columns>TagNo__c</columns>
        <columns>TaskType__c</columns>
        <columns>TaskObjective__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My CC to</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{000}</displayFormat>
        <label>CC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ORTLRelevantUserCheckName</fullName>
        <active>false</active>
        <description>Relevant user != Owner action</description>
        <errorConditionFormula>RelevantUser__r.FirstName&amp;RelevantUser__r.LastName  =  ActionNumber__r.Owner:User.FirstName &amp;  ActionNumber__r.Owner:User.LastName</errorConditionFormula>
        <errorMessage>Not allow to add relevant user as same as action owner.</errorMessage>
    </validationRules>
</CustomObject>